--- a/package.json
+++ b/package.json
@@ -2,4 +2,8 @@
   "devDependencies": {
     "typings": "^0.7.9"
   }
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
+  }
 }
