--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "devDependencies": {
-    "typings": "^0.7.9"
-  }
+    "babel-cli": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.9",
+    "typings": "^0.7.9",
+    "webpack": "^1.12.14"
+  },
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
