--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "ts-loader": "^0.8.1",
+    "tslint": "^3.6.0",
     "typescript": "^1.8.9",
     "typings": "^0.7.9",
     "webpack": "^1.12.14"
