--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 language: python
 python:
   - "3.5"
+cache: pip
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
 env:
   - COMMAND=tslint
   - COMMAND=pylint
