--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
     "react-dom": "^0.14.7"
