--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,15 @@ sudo: false
 language: python
 python:
   - "3.5"
-cache: pip
+cache:
+  pip: true
+  directories:
+    - node_modules
+    - ENV
+    - "$HOME/.nvm"
+    - "$HOME/.npm"
+    - typings
+
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 env:
