--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-polyfill": "^6.7.4",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-draggable": "^2.0.0-beta3"
   }
 }
