Porting server to golang.
아무래도 배포를 네이티브 바이너리로 하는게 사람들이 사용하게 하기 좋기 때문에
파이썬에서 golang으로 언어 변경.

파이썬이 설치된 환경이 많기 때문에 문제 없을거라고 생각했는데 생각보다
python3.5가 설치되지 않은 환경이 많음.

서버 빌드를 명령하면, 클라이언트 코드를 빌드하고, go-bindata를 이용해서 패킹함.
그래서 server/bindata.go 파일은 깃에 추가되면 안 됨.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,21 @@
 sudo: false
-language: python
-python:
-  - "3.5"
+language: go
+go:
+  - 1.6
 cache:
-  pip: true
   directories:
     - node_modules
-    - ENV
     - "$HOME/.nvm"
     - "$HOME/.npm"
     - typings
+    - $GOPATH
 
-before_cache:
-  - rm -f $HOME/.cache/pip/log/debug.log
 env:
-  - COMMAND=tslint
-  - COMMAND=pylint
-  - COMMAND=test
+    - COMMAND=tslint
+    - COMMAND=./server/server
+
 install:
   - nvm install 4.0
+
 script:
   - make $COMMAND
