--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "babel-polyfill": "^6.7.4",
     "react": "^0.14.7",
     "react-bootstrap": "^0.29.3",
-    "react-dom": "^0.14.7",
-    "react-draggable": "^2.0.0-beta3"
+    "react-dom": "^0.14.7"
   }
 }
