--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-polyfill": "^6.7.4",
     "react": "^0.14.7",
     "react-bootstrap": "^0.29.3",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7"
   }
 }
