Reorder selecteds with drag and drop.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "jsx": "preserve",
     "suppressImplicitAnyIndexErrors": true,
+    "experimentalDecorators": true,
     "target": "ES6"
   },
   "exclude": [
